# book-rust

./: .gitignore  LICENSE  README.md
src/apx1/: i64_i32_err.rs  i64_i32_fix.rs  int_to_str_err.rs  int_to_str_fix.rs  ref2_err.rs  ref2_fix.rs  split_err.rs  split_fix.rs  str_quote_err.rs  str_quote_fix.rs
src/ch1/: caesar_enc.py  caesar_enc.rs  caesar_enc2.py  caesar_enc2.rs  caesar_enc2x.rs  check3.rs  check_range.py  check_range.rs  cmptext.bat  cmptext.sh  coin.py  coin.rs  coin_type.rs  fib.py  fib.rs  fizzbuzz.py  fizzbuzz.rs  hello.rs  if_value.rs  kaimono.rs  kakezan.rs  kuku.csv  kuku.py  kuku.rs  kuku2.py  kuku2.rs  let_error.rs  let_ok.rs  let_test.rs  moon.py  moon.rs  prime100.py  prime100.rs  ref_test.rs  seireki_wareki.rs  show_price.py  show_price.rs  sum1to10.rs  sum1to10array.rs  sum1to10v2.rs  (+4 more)
src/ch2/: bingocard.py  bmi.py  bmi.rs  char_type.rs  cmptext.py  cmptext.rs  counter.py  counter.rs  cur_files.rs  dice.py  findfile.py  findfile.rs  fizzbuzz_file.rs  fizzbuzz_file2.rs  float_type.rs  hashmap_chk.rs  hashmap_err.rs  hashmap_match.rs  hex_oct_bin.rs  input_height.rs  int_type.rs  jisyo.py  jisyo.rs  maze.py  mytree.rs  nums.txt  pow1234_5678.py  pow1234_5678_err.rs  print_args.rs  print_args_vec.rs  range.rs  read_file.rs  rec_fib.rs  rec_sum1to10.rs  str_parse_f.rs  str_parse_i.rs  str_parse_i2.rs  sum_args.py  sum_args.rs  sum_textfile.py  (+3 more)
src/ch3/: a  a.rs  array_get  array_get.rs  array_init.rs  array_init2.rs  bmi_struct  bmi_struct.py  bmi_struct.rs  buta.rs  (+52 more)
src/ch4/rpn_calc/: Cargo.toml  README.md
src/ch4/rpn_calc/src/: lib.rs
(+187 files in other folders)
